# simple-vpn

./: .gitignore  LICENSE
playtun/: create.py  delete.py  dump.py  get.py  read.py
tunnel/: Cargo.toml
tunnel-cli/: Cargo.toml  README.md
tunnel-cli/src/: main.rs
tunnel-indocker/: Dockerfile  Readme.md  docker-compose.dev.yml
tunnel-indocker/localhost-bore/: Cargo.toml  Readme.md
tunnel-indocker/localhost-bore/src/: client.rs  lib.rs  main.rs  server.rs  shared.rs
tunnel-indocker/localhost-tunnel/: Cargo.toml  Readme.md
tunnel-indocker/localhost-tunnel/client_render/: index.html
tunnel-indocker/localhost-tunnel/src/: main.rs
tunnel-indocker/vpn/: Cargo.toml
tunnel-indocker/vpn/src/: main.rs  socket.rs  tun.rs  tunerror.rs
tunnel-local/: Cargo.toml  README.md
tunnel-local/src/: main.rs
tunnel/src/: lib.rs  net.rs  packet.rs  select.rs  tun.rs  tunerror.rs
vpn/: Cargo.toml
vpn/src/: lib.rs  main.rs  socket.rs  tun.rs
