[package]
name = "locbore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "io-util", "macros", "net", "time"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
dashmap = "5.2.0"
anyhow = { version = "1.0.56", features = ["backtrace"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
futures-util = { version = "0.3.21", features = ["sink"] }
clap = {version = "4.5.4", features = [ "derive" ]}
