[package]
name = "vpn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.5.4", features = [ "derive" ]}
etherparse = "0.13"
libc = "0.2"
socket2 = "0.5.7"
thiserror = "1.0.60"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28.0", default-features = false, features = [
    "process",
    "poll"
] }